--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=8081
 
+spring.datasource.url=jdbc:postgresql://localhost:5434/eventstore
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.sql.init.mode=always
+
+spring.output.ansi.enabled=ALWAYS
+
+spring.rabbitmq.addresses= localhost:5672
+
+bank.name=INGB
+bank.exchange.name=INGB-Exchange
+bank.transfer.queue.name=INGB-EventStore-Transfer-Queue
+bank.transfer.routing.key=INGB-Transfer
